--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 .avatar-img {
   height: 150px;
   padding-top: 1em;
-  border-radius: 60%;
+  border-radius: 50%;
   
 }
 
@@ -45,6 +45,12 @@
 }
 
 .banner-text p {
+  color: white;
+  font-size: 20px;
+  padding: 1em;
+}
+
+.banner-text h2 {
   color: white;
   font-size: 20px;
   padding: 1em;
